-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Catalog and Routing
-
Fully Compatible
-
ALL
-
v9.0
-
CAR Team 2026-08-03, CAR Team 2026-08-17
-
200
-
🟥 DDL
-
None
-
None
-
None
-
None
-
None
-
None
Once movePrimary completes or aborts it should clear up the CSR state of the cloned collections to avoid having the CSR with kUntracked on a stale shard.
- related to
-
SERVER-132505 Auth shards may encounter stale metadata from the legacy refresh sharding metadata
-
- Closed
-
-
SERVER-132580 Investigate usages of the DSS/CSS from DDLs for Authoritative Shards
-
- Closed
-
-
SERVER-132479 Extend checkMetadataConsistency to detect CSR states without a matching durable entry
-
- Closed
-