SERVER-132477 Invalidate untracked/unowned collection metadata during database metadata drop (#60018)

Co-authored-by: Joan Bruguera Micó (at MongoDB) <joan.bruguera-mico@mongodb.com>
GitOrigin-RevId: 061bf676af3c77deb745f5e3000bb00c5fdffc78